# spotMicro-Chinese

./: .gitignore  README.md
SERVO_PAC9685/: 资料链接.txt
SERVO_PAC9685/orangepi_pca9685_test/: README.md  pca9685_test.py  set_all_servos.py  set_servo.py
SERVO_PAC9685/raspi_pca9685_test/: README.md  pca9685_test.py  set_all_servos.py  set_servo.py
docs/: 仓库结构说明.md
hardware/: 材料清单.md  材料清单.xlsx  舵机标定.txt  舵机组装初始化角度设置标准化流程.md
hardware/3D模型及打印文件/打印全盘文件/: H2C_3D打印_外壳.3mf  LabA1_3D打印_屁股_躯干_头_粘板.3mf
software/docs/: build_notes.md  ~$servo_calibration_spreadsheet.ods
software/docs_cn/: LEARNING_GUIDE.md  README.md  servo_calibration.md  实验操作手册.md  机器狗组装与舵机初始值设置.md
software/ros-i2cpwmboard/: CMakeLists.txt
software/ros-i2cpwmboard/src/: i2cpwm_controller.cpp
software/servo_move_keyboard/scripts/: servoMoveKeyboard.py
software/spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml
software/spot_micro_motion_cmd/src/: spot_micro_motion_cmd.cpp
software_orangepiaipro/: LOCALIZATION_LAYOUT.md  README.md
software_orangepiaipro/docs/: build_notes.md
software_orangepiaipro/docs_cn/: ORANGEPI_AI_PRO_NOETIC_DEPLOYMENT.md  OrangePi_Jammy_Noetic_导航编译排障.md  README.md  RPLidar_Hector_实操问题复盘.md  navigation_stack_runbook.md  servo_calibration.md  tf_chain_spotmicro_navigation.md  大模型与训练模型接入路线图.md  实验操作手册.md  第三方库.txt  舵机标定计算说明.md  运动调试复盘.md
software_orangepiaipro/docs_cn/01_环境部署/: README.md  实验操作手册.md  香橙派远程桌面连接与故障排查手册.md
software_orangepiaipro/docs_cn/02_标定与运动/: README.md  servo_calibration.md
software_orangepiaipro/docs_cn/03_导航与雷达/: AMCL_move_base_源码补齐方案.md  OrangePi_自动探索与自动巡视实机检查清单.md  README.md  SpotMicro 导航方案设计.md  SpotMicro_两条命令统一启动方案.md  SpotMicro_雷达建图与AMCL定位阶段总结.md  SpotMicro_雷达避障漫游自动建图方案.md  navigation_stack_runbook.md  无RViz纯命令行导航测试手册.md  自动探索与自动巡视运行手册.md  自动探索转向步态逐渐混乱问题记录与修复方案.md  自动探索遇障频繁切换问题与模糊控制方案可行性分析.md  雷达使用手册.md
software_orangepiaipro/docs_cn/04_学习与规划/: LEARNING_GUIDE.md  README.md  (+6 more)
software_orangepiaipro/orangepi_ros_backup_template/: .gitignore  README.md
software_orangepiaipro/scripts/: common_run_on_all_cores.sh  link_spotmicro_workspace.sh  read_robot_mode_config.py  safe_stop_robot.sh  start_auto_explore_mapping.sh  start_auto_patrol.sh
software_orangepiaipro/spot_micro_app_backend/: CMakeLists.txt  package.xml  setup.py
software_orangepiaipro/spot_micro_app_backend/config/: backend_runtime.yaml
software_orangepiaipro/spot_micro_app_backend/launch/: app_backend.launch
software_orangepiaipro/spot_micro_app_backend/scripts/: spot_micro_app_backend_node.py
software_orangepiaipro/spot_micro_app_backend/src/spot_micro_app_backend/: __init__.py  action_manager.py  api_server.py  app.py  autonomy_manager.py  health_monitor.py  manual_control_manager.py  map_registry.py  mode_manager.py  models.py  random_patrol_manager.py  ros_runtime_adapter.py  session_watchdog.py  state_manager.py  status_gateway.py
software_orangepiaipro/spot_micro_app_backend/web/: app.css  app.js  index.html
software_orangepiaipro/spot_micro_launch/: CMakeLists.txt  package.xml
software_orangepiaipro/spot_micro_motion_cmd/: CMakeLists.txt
software_orangepiaipro/spot_micro_navigation/: CMakeLists.txt  package.xml
software_orangepiaipro/spot_micro_navigation/config/: amcl.yaml  cmd_vel_arbiter.yaml  costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  global_planner.yaml  gmapping.yaml  hector_mapping.yaml  local_costmap.yaml  move_base.yaml  robot_mode_config.yaml  safety_gate.yaml  wander_explorer.yaml
software_orangepiaipro/spot_micro_navigation/launch/: auto_explore_mapping.launch  auto_patrol.launch  localization_amcl.launch  navigation_astar_dwa.launch  slam_gmapping_mapping.launch  slam_hector_mapping.launch
software_orangepiaipro/spot_micro_navigation/scripts/: cmd_vel_arbiter.py  cmd_vel_safety_gate.py  laser_wander_explorer.py  nav_mode_manager.py  periodic_map_saver.py  run_with_delay.sh  safe_stop_robot.py
software_standalone/: README.md  pyproject.toml  requirements.txt
software_standalone/spotmicro_standalone/: __init__.py
software_standalone/spotmicro_standalone/apps/: teleop.py
software_standalone/spotmicro_standalone/config/: __init__.py  default.yaml  loader.py
software_standalone/spotmicro_standalone/docs/: LEARNING.md  TUNING.md  USAGE.md
software_standalone/spotmicro_standalone/hardware/: __init__.py  board.py  servo_driver.py
software_standalone/spotmicro_standalone/interfaces/: __init__.py  keyboard.py
software_standalone/spotmicro_standalone/runtime/: __init__.py  teleop.py
software_standalone/spotmicro_standalone/spot_micro_kinematics/: spot_micro_stick_figure.py
software_standalone/tests/: test_servo_driver.py
硬件部分/: 材料清单.xlsx
软件部分/: README.md  SOFTWARE_ASSESSMENT.md  servo_calibration.md
(+83 files in other folders)
